<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_blue_dark"
    android:paddingTop="@dimen/padding_top"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
    app:theme="@style/AppTheme.Base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/ic_launcher"
                style="@style/Toolbar_icons"
                android:contentDescription="@string/ic_launcher"

                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ic_action_picture"
                style="@style/Toolbar_icons"
                android:contentDescription="@string/ic_action_picture"
                android:src="@drawable/ic_action_picture"

                />

            <ImageButton
                android:id="@+id/ic_action_share"
                style="@style/Toolbar_icons"
                android:contentDescription="@string/ic_action_share"
                android:src="@drawable/ic_action_share"
                />




        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.Toolbar>